c4prj2_input/grade.txt
Grading at Sat Jun 27 05:26:48 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:26:7: error: expected ‘;’ before ‘continue’
       continue;
       ^
Compilation of input.c failed

Overall Grade: F
